Sun Dec 08 08:42:47 GMT 2002  Olly Betts <olly@survex.com>

	* scriptindex.cc: Replaced icky unportable code which set the filename
	  to "/dev/fd/0" in order to read from stdin.

Sun Dec 08 06:39:30 GMT 2002  Olly Betts <olly@survex.com>

	* query.cc,docs/omegascript.txt: Fixed $hitlist to complain if more
	  than one parameter is passed; $topterms now defaults to 16 terms
	  rather than 20; $topterms now weeds out terms which stem to the
	  same as those in the query, or those already in $topterms. 

Sun Dec 08 06:36:04 GMT 2002  Olly Betts <olly@survex.com>

	* templates/query: Make background white - the very light grey just
	  looks dirty; fixed exclusion of TopTerms Javascript when there
	  are not TopTerms; sample now <small>; language and size now
	  appear when the corresponding fields are present; fixed
	  unmatched </small>; fixed missing list of terms matching
	  each document.

Sat Dec 07 21:20:31 GMT 2002  Olly Betts <olly@survex.com>

	* configure.in: Version 0.6.2.

Sat Dec 07 21:04:31 GMT 2002  Olly Betts <olly@survex.com>

	* query.cc: Prefer "while (true)" to "while (1)".

Fri Dec 06 04:41:05 GMT 2002  Olly Betts <olly@survex.com>

	* omindex.cc: Index .php files by default; non-zero return code if
	  an exception is caught.

Fri Dec 06 04:30:17 GMT 2002  Olly Betts <olly@survex.com>

	* htmlparse.cc: Ignore PHP tags and their contents; fixed tag
	  scanning code to never read one character past the end of
	  the document.

Wed Dec 04 18:42:51 GMT 2002  Olly Betts <olly@survex.com>

	* omega.cc,omega.h,omindex.cc,query.cc,scriptindex.cc:
	  Updated in line with OmSettings related changes to the API.

Wed Dec 04 17:13:43 GMT 2002  Olly Betts <olly@survex.com>

	* query.cc: Fixed $dbname to return "default" for the default
	  database, rather than "" - this fixes paging in searches of the
	  default database.
	* templates/query: Removed xDEFAULTOP hidden field which is no longer
	  used.

Wed Dec 04 11:57:13 GMT 2002  Olly Betts <olly@survex.com>
